fixing bug on mobile

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -74,6 +74,7 @@
   body {
     padding: 2.4rem;
     flex-direction: column;
+    height: fit-content;
   }
 
   .cards__section {
@@ -95,5 +96,10 @@
     order: 1;
     width: 50vw;
     height: fit-content;
+  }
+  .winning {
+    top: 50%;
+    transform: translateX(-50%);
+    transform: translateY(-50%);
   }
 }
